internal/generator/output/interop_array.h

typedef struct {
    void* data;
    int length;
    int elementSize;
} GoArray;
typedef struct {
    uint32_t v0;
    uint32_t v1;
    uint32_t v2;
    uint32_t v3;
} Color_RGBA64_RGBA_Result;
typedef struct {
    GoArray v0;
    uint64_t v1;
} Dialogue_Button_MarshalJSON_Result;
typedef struct {
    GoArray v0;
    uint64_t v1;
} Dialogue_Dialogue_MarshalJSON_Result;
typedef struct {
    GoArray v0;
    uint64_t v1;
} Dialogue_DisplaySettings_MarshalJSON_Result;
typedef struct {
    int v0;
    uint64_t v1;
} Inventory_Inventory_AddItem_Result;
typedef struct {
    int v0;
    bool v1;
} Inventory_Inventory_First_Result;
typedef struct {
    int v0;
    bool v1;
} Inventory_Inventory_FirstEmpty_Result;
typedef struct {
    int v0;
    bool v1;
} Inventory_Inventory_FirstFunc_Result;
typedef struct {
    uint64_t v0;
    uint64_t v1;
} Inventory_Inventory_Item_Result;
typedef struct {
    uint64_t v0;
    uint64_t v1;
} Item_Stack_AddStack_Result;
typedef struct {
    uint64_t v0;
    bool v1;
} Item_Stack_Enchantment_Result;
typedef struct {
    uint64_t v0;
    bool v1;
} Item_Stack_Value_Result;
typedef struct {
    uint64_t v0;
    uint64_t v1;
} Language_Region_TLD_Result;
typedef struct {
    uint64_t v0;
    int v1;
} Language_Tag_Base_Result;
typedef struct {
    uint64_t v0;
    bool v1;
} Language_Tag_Extension_Result;
typedef struct {
    GoArray v0;
    uint64_t v1;
} Language_Tag_MarshalText_Result;
typedef struct {
    uint64_t v0;
    uint64_t v1;
    uint64_t v2;
} Language_Tag_Raw_Result;
typedef struct {
    uint64_t v0;
    int v1;
} Language_Tag_Region_Result;
typedef struct {
    uint64_t v0;
    int v1;
} Language_Tag_Script_Result;
typedef struct {
    uint64_t v0;
    uint64_t v1;
} Language_Tag_SetTypeForKey_Result;
typedef struct {
    int v0;
    bool v1;
} Player_Player_Collect_Result;
typedef struct {
    GoArray v0;
    uint64_t v1;
    bool v2;
} Player_Player_DeathPosition_Result;
typedef struct {
    uint64_t v0;
    bool v1;
} Player_Player_Effect_Result;
typedef struct {
    uint64_t v0;
    uint64_t v1;
} Player_Player_HeldItems_Result;
typedef struct {
    double v0;
    bool v1;
} Player_Player_Hurt_Result;
typedef struct {
    GoArray v0;
    bool v1;
} Player_Player_Sleeping_Result;
typedef struct {
    int v0;
    uint64_t v1;
} Scoreboard_Scoreboard_Write_Result;
typedef struct {
    int v0;
    uint64_t v1;
} Scoreboard_Scoreboard_WriteString_Result;
typedef struct {
    uint64_t v0;
    bool v1;
} World_EntityHandle_Entity_Result;
typedef struct {
    uint64_t v0;
    bool v1;
} World_EntityRegistry_Lookup_Result;
typedef struct {
    uint64_t v0;
    bool v1;
} World_Tx_Liquid_Result;
void Go_ReleaseHandle(uint64_t handle);
void C_FreeString(char* value);
void C_FreeMemory(void* value);
uint64_t Block_ExplosionConfig_Ctor(void);
void Block_ExplosionConfig_Explode(uint64_t self, uint64_t p1, uint64_t p2);
uint64_t Bossbar_BossBar_Ctor(void);
uint64_t Bossbar_BossBar_Colour(uint64_t self);
double Bossbar_BossBar_HealthPercentage(uint64_t self);
char* Bossbar_BossBar_Text(uint64_t self);
uint64_t Bossbar_BossBar_WithColour(uint64_t self, uint64_t p1);
uint64_t Bossbar_BossBar_WithHealthPercentage(uint64_t self, double p1);
uint64_t Bossbar_Colour_Ctor(void);
uint8_t Bossbar_Colour_Uint8(uint64_t self);
uint64_t Chat_Translation_Ctor(void);
uint64_t Chat_Translation_Enc(uint64_t self, char* p1);
uint64_t Chat_Translation_F(uint64_t self, uint64_t p1);
char* Chat_Translation_Resolve(uint64_t self, uint64_t p1);
bool Chat_Translation_Zero(uint64_t self);
uint64_t Cmd_Output_Ctor(void);
void Cmd_Output_Error(uint64_t self, uint64_t p1);
int Cmd_Output_ErrorCount(uint64_t self);
void Cmd_Output_Errorf(uint64_t self, char* p1, uint64_t p2);
GoArray Cmd_Output_Errors(uint64_t self);
void Cmd_Output_Errort(uint64_t self, uint64_t p1, uint64_t p2);
int Cmd_Output_MessageCount(uint64_t self);
GoArray Cmd_Output_Messages(uint64_t self);
void Cmd_Output_Print(uint64_t self, uint64_t p1);
void Cmd_Output_Printf(uint64_t self, char* p1, uint64_t p2);
void Cmd_Output_Printt(uint64_t self, uint64_t p1, uint64_t p2);
uint64_t Color_RGBA64_Ctor(void);
Color_RGBA64_RGBA_Result Color_RGBA64_RGBA(uint64_t self);
uint64_t Cube_BBox_Ctor(void);
GoArray Cube_BBox_Corners(uint64_t self);
uint64_t Cube_BBox_Extend(uint64_t self, uint64_t p1);
uint64_t Cube_BBox_ExtendTowards(uint64_t self, int p1, double p2);
uint64_t Cube_BBox_Grow(uint64_t self, double p1);
uint64_t Cube_BBox_GrowVec3(uint64_t self, uint64_t p1);
double Cube_BBox_Height(uint64_t self);
bool Cube_BBox_IntersectsWith(uint64_t self, uint64_t p1);
double Cube_BBox_Length(uint64_t self);
GoArray Cube_BBox_Max(uint64_t self);
GoArray Cube_BBox_Min(uint64_t self);
uint64_t Cube_BBox_Mul(uint64_t self, double p1);