internal/generator/output/interop_bindings.g.cs

// Code generated by generator. DO NOT EDIT.
using System;
using System.Runtime.InteropServices;

namespace BedrockPlugin.Interop;

[StructLayout(LayoutKind.Sequential)]
public readonly struct GoArray<T> where T : unmanaged
{
    public readonly IntPtr Data;
    public readonly int Length;
    public readonly int ElementSize;

    public GoArray(IntPtr data, int length, int elementSize)
    {
        Data = data;
        Length = length;
        ElementSize = elementSize;
    }

    public unsafe Span<T> AsSpan()
    {
        if (Data == IntPtr.Zero || Length <= 0)
        {
            return Span<T>.Empty;
        }
        if (ElementSize != sizeof(T))
        {
            throw new InvalidOperationException($"Element size mismatch. Native={ElementSize}, Managed={sizeof(T)}");
        }
        return new Span<T>((void*)Data, Length);
    }

    public void Free() => Native.C_FreeMemory(Data);
}

[StructLayout(LayoutKind.Sequential)]
public readonly struct GoArrayNative
{
    public readonly IntPtr Data;
    public readonly int Length;
    public readonly int ElementSize;
}

[StructLayout(LayoutKind.Sequential)]
public struct Color_RGBA64_RGBA_Result
{
    public uint V0;
    public uint V1;
    public uint V2;
    public uint V3;
}

[StructLayout(LayoutKind.Sequential)]
public struct Dialogue_Button_MarshalJSON_Result
{
    public GoArrayNative V0;
    public ulong V1;
}

[StructLayout(LayoutKind.Sequential)]
public struct Dialogue_Dialogue_MarshalJSON_Result
{
    public GoArrayNative V0;
    public ulong V1;
}

[StructLayout(LayoutKind.Sequential)]
public struct Dialogue_DisplaySettings_MarshalJSON_Result
{
    public GoArrayNative V0;
    public ulong V1;
}

[StructLayout(LayoutKind.Sequential)]
public struct Inventory_Inventory_AddItem_Result
{
    public int V0;
    public ulong V1;
}

[StructLayout(LayoutKind.Sequential)]
public struct Inventory_Inventory_First_Result
{
    public int V0;
    public byte V1;
}

[StructLayout(LayoutKind.Sequential)]
public struct Inventory_Inventory_FirstEmpty_Result
{
    public int V0;
    public byte V1;
}

[StructLayout(LayoutKind.Sequential)]
public struct Inventory_Inventory_FirstFunc_Result
{
    public int V0;
    public byte V1;
}

[StructLayout(LayoutKind.Sequential)]
public struct Inventory_Inventory_Item_Result
{
    public ulong V0;
    public ulong V1;
}

[StructLayout(LayoutKind.Sequential)]
public struct Item_Stack_AddStack_Result
{
    public ulong V0;
    public ulong V1;
}

[StructLayout(LayoutKind.Sequential)]
public struct Item_Stack_Enchantment_Result
{
    public ulong V0;
    public byte V1;
}

[StructLayout(LayoutKind.Sequential)]
public struct Item_Stack_Value_Result
{
    public ulong V0;
    public byte V1;
}

[StructLayout(LayoutKind.Sequential)]
public struct Language_Region_TLD_Result
{
    public ulong V0;
    public ulong V1;
}

[StructLayout(LayoutKind.Sequential)]
public struct Language_Tag_Base_Result
{
    public ulong V0;
    public int V1;
}

[StructLayout(LayoutKind.Sequential)]
public struct Language_Tag_Extension_Result
{
    public ulong V0;
    public byte V1;
}

[StructLayout(LayoutKind.Sequential)]
public struct Language_Tag_MarshalText_Result
{
    public GoArrayNative V0;
    public ulong V1;
}

[StructLayout(LayoutKind.Sequential)]
public struct Language_Tag_Raw_Result
{
    public ulong V0;
    public ulong V1;
    public ulong V2;
}

[StructLayout(LayoutKind.Sequential)]
public struct Language_Tag_Region_Result
{
    public ulong V0;
    public int V1;
}

[StructLayout(LayoutKind.Sequential)]
public struct Language_Tag_Script_Result
{
    public ulong V0;
    public int V1;
}

[StructLayout(LayoutKind.Sequential)]
public struct Language_Tag_SetTypeForKey_Result
{
    public ulong V0;
    public ulong V1;
}

[StructLayout(LayoutKind.Sequential)]
public struct Player_Player_Collect_Result
{
    public int V0;
    public byte V1;
}

[StructLayout(LayoutKind.Sequential)]
public struct Player_Player_DeathPosition_Result
{
    public GoArrayNative V0;
    public ulong V1;
    public byte V2;
}

[StructLayout(LayoutKind.Sequential)]
public struct Player_Player_Effect_Result
{
    public ulong V0;
    public byte V1;
}

[StructLayout(LayoutKind.Sequential)]
public struct Player_Player_HeldItems_Result
{
    public ulong V0;
    public ulong V1;
}

[StructLayout(LayoutKind.Sequential)]
public struct Player_Player_Hurt_Result
{
    public double V0;
    public byte V1;
}

[StructLayout(LayoutKind.Sequential)]
public struct Player_Player_Sleeping_Result
{
    public GoArrayNative V0;
    public byte V1;
}

[StructLayout(LayoutKind.Sequential)]
public struct Scoreboard_Scoreboard_Write_Result
{
    public int V0;
    public ulong V1;
}

[StructLayout(LayoutKind.Sequential)]
public struct Scoreboard_Scoreboard_WriteString_Result
{
    public int V0;
    public ulong V1;
}

[StructLayout(LayoutKind.Sequential)]
public struct World_EntityHandle_Entity_Result
{
    public ulong V0;
    public byte V1;
}

[StructLayout(LayoutKind.Sequential)]
public struct World_EntityRegistry_Lookup_Result
{
    public ulong V0;
    public byte V1;
}

[StructLayout(LayoutKind.Sequential)]
public struct World_Tx_Liquid_Result
{
    public ulong V0;
    public byte V1;
}

internal static class InteropHelpers
{
    internal static string ConsumeCString(IntPtr value)
    {
        if (value == IntPtr.Zero)
        {
            return string.Empty;
        }
        try
        {
            return Marshal.PtrToStringUTF8(value) ?? string.Empty;
        }
        finally
        {
            Native.C_FreeString(value);
        }
    }
}

internal static class Native
{
    private const string LibraryName = "plugin";

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Go_ReleaseHandle(ulong handle);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void C_FreeString(IntPtr value);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void C_FreeMemory(IntPtr value);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Block_ExplosionConfig_Ctor();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Block_ExplosionConfig_Explode(ulong self, ulong p1, ulong p2);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Bossbar_BossBar_Ctor();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Bossbar_BossBar_Colour(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern double Bossbar_BossBar_HealthPercentage(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr Bossbar_BossBar_Text(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Bossbar_BossBar_WithColour(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Bossbar_BossBar_WithHealthPercentage(ulong self, double p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Bossbar_Colour_Ctor();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Bossbar_Colour_Uint8(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Chat_Translation_Ctor();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Chat_Translation_Enc(ulong self, IntPtr p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Chat_Translation_F(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr Chat_Translation_Resolve(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Chat_Translation_Zero(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Cmd_Output_Ctor();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Cmd_Output_Error(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int Cmd_Output_ErrorCount(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Cmd_Output_Errorf(ulong self, IntPtr p1, ulong p2);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern GoArrayNative Cmd_Output_Errors(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Cmd_Output_Errort(ulong self, ulong p1, ulong p2);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int Cmd_Output_MessageCount(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern GoArrayNative Cmd_Output_Messages(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Cmd_Output_Print(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Cmd_Output_Printf(ulong self, IntPtr p1, ulong p2);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Cmd_Output_Printt(ulong self, ulong p1, ulong p2);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Color_RGBA64_Ctor();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Color_RGBA64_RGBA_Result Color_RGBA64_RGBA(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Cube_BBox_Ctor();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern GoArrayNative Cube_BBox_Corners(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Cube_BBox_Extend(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Cube_BBox_ExtendTowards(ulong self, int p1, double p2);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Cube_BBox_Grow(ulong self, double p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Cube_BBox_GrowVec3(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern double Cube_BBox_Height(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Cube_BBox_IntersectsWith(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern double Cube_BBox_Length(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern GoArrayNative Cube_BBox_Max(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern GoArrayNative Cube_BBox_Min(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Cube_BBox_Mul(ulong self, double p1);
